--- a/examples/google-sql-v3.yaml
+++ b/examples/google-sql-v3.yaml
@@ -16,6 +16,7 @@ metadata:
     author: Viktor Farcic <viktor@farcic.com>
 spec:
   id: my-db
+  # provided by the composition ( no need to define it there) 
   compositionSelector:
     matchLabels:
       provider: google
