Adjusted the provideres to match crossplane v1.20

--- a/providers/dot-sql-v7.yaml
+++ b/providers/dot-sql-v7.yaml
@@ -4,4 +4,4 @@ kind: Configuration
 metadata:
   name: crossplane-sql
 spec:
-  package: xpkg.upbound.io/hodhod/hodhod:v0.0.7
+  package: xpkg.crossplane.io/hodhod/hodhod:v0.2.0
