--- a/compositions/sql-v7/crossplane.yaml
+++ b/compositions/sql-v7/crossplane.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dot-sql
   annotations:
     meta.crossplane.io/maintainer: Viktor Farcic (@vfarcic)
-    meta.crossplane.io/source: github.com/vfarcic/crossplane-tutorial
+    meta.crossplane.io/source: github.com/ahmed-hodhod/crossplane-tutorial
     meta.crossplane.io/license: MIT
     meta.crossplane.io/description: Fully operational PostgreSQL databases in AWS, Google Cloud Platform, and Azure.
     meta.crossplane.io/readme: A Configuration package that defines a SQL and SQLClaim types that can be used to create and provision fully operational databases in AWS, Google Cloud Platform, and Azure.
@@ -12,15 +12,15 @@ spec:
   crossplane:
     version: ">=v1.14.0"
   dependsOn:
-  - provider: xpkg.upbound.io/upbound/provider-aws-ec2
+  - provider: xpkg.crossplane.io/upbound/provider-aws-ec2
     version: ">=v1.0.0"
-  - provider: xpkg.upbound.io/upbound/provider-aws-rds
+  - provider: xpkg.crossplane.io/upbound/provider-aws-rds
     version: ">=v1.0.0"
-  - provider: xpkg.upbound.io/upbound/provider-azure-dbforpostgresql
+  - provider: xpkg.crossplane.io/upbound/provider-azure-dbforpostgresql
     version: ">=v0.33.0"
-  - provider: xpkg.upbound.io/upbound/provider-gcp-sql
+  - provider: xpkg.crossplane.io/upbound/provider-gcp-sql
     version: ">=v0.33.0"
-  - provider: xpkg.upbound.io/crossplane-contrib/provider-sql
+  - provider: xpkg.crossplane.io/crossplane-contrib/provider-sql
     version: ">=v0.9.0"
   # - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
   #   version: ">=v0.10.0"
