--- a/providers/function-go-templating.yaml
+++ b/providers/function-go-templating.yaml
@@ -4,4 +4,4 @@ kind: Function
 metadata:
   name: upbound-function-go-templating
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-go-templating:v0.4.0
+  package: xpkg.crossplane.io/crossplane-contrib/function-go-templating:v0.4.0
